--- a/popup.html
+++ b/popup.html
@@ -1,92 +1,56 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Suggest a Hyperlink</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0px;
-            padding: 0px;
-            background-color: #41ad38;
-        }
-        p{
-            color: white;
-            font-size: 16px;
-            margin: 8px;
-        }
-        #selected-text {
-            font-weight: bold;
-        }
-        #form-container {
-            width: 300px;
-            height: 350px;
-            background-color: #41ad38;
+document.addEventListener('DOMContentLoaded', () => {
+    // Handle form submission
+    document.getElementById('submit-btn').addEventListener('click', () => {
+        // Retrieve values from the form
+        const url = document.getElementById('link-url').value;
+        const description = document.getElementById('description').value;
 
-        }
-        input[type="text"], textarea {
-            width: 90%;
-            padding: 5px;
-            margin-bottom: 10px;
-            background-color: #41ad38;
-            border: 2px dashed white;
-            margin: 6px;
-            color: white;
-        }
-        textarea{
-            height: 200px;
-        }
-        input::placeholder, textarea::placeholder {
-  color: white;
-}
-        .button-container{
-            background-color: #e8ffe6;
-            width: 100%;
-            height: 70px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-        }
-        button {
-            padding: 5px 10px;
-            margin-right: 5px;
-            margin: 4px;
-            background: none;
-            border: none;
-            color: #41ad38;
-            cursor: pointer;
-        }
-        button:hover{
-            font-weight: bold;
-            padding: 5px 10px;
-            margin-right: 5px;
-            margin: 4px;
-            background: none;
-            border: none;
-            color: #41ad38;
-            cursor: pointer;
-        }
-        #logo{
-            font-family: Futura;
-            font-weight: bold;
-            color:#41ad38;
-            font-size: 16px;
-            margin-right: 10px;
-        }
-    </style>
-</head>
-<body>
-    <div id="form-container">
-        <p>suggest a hyperlink</p>
-        <p id="selected-text"></p>
-        <input type="text" id="link-url" placeholder="link" />
-        <textarea id="description" placeholder="brief description of how this link is related" rows="4"></textarea>
-        <br/>
-        <div class="button-container">
-        <button id="submit-btn">submit</button>
-        <h2 id="logo">greenwich</h2>
-        </div>
-    </div>
-    <script src="popup.js"></script>
-</body>
-</html>
+        // Retrieve stored values from session storage
+        chrome.storage.local.get(['currentSelectedText', 'source_url'], (result) => {
+            const selectedText = result.currentSelectedText || '';
+            const source_url = result.source_url || '';
+
+            console.log('Selected Text:', selectedText);
+            console.log('Source URL:', source_url);
+
+            if (url && description && selectedText && source_url) {
+                // Send message to content script to create the post-it note
+                chrome.tabs.query({ active: true, currentWindow: true }, (tabs) => {
+                    chrome.tabs.sendMessage(tabs[0].id, {
+                        type: "suggestLink",
+                        text: description,
+                        url: url
+                    });
+                });
+
+                // Prepare the new suggested link for our API call
+                const postData = {
+                    source_url: source_url,
+                    highlighted_text: selectedText,
+                    suggested_link: url,
+                    description: description
+                };
+
+                // Send the POST request to the backend API
+                fetch('https://greenwich-for-chrome.replit.app/addPostIt', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(postData)
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Post-it note saved:', data);
+                })
+                .catch(error => {
+                    console.error('Error saving post-it note:', error);
+                });
+            } else {
+                alert('Please fill in all required fields.');
+            }
+        });
+    });
+
+    
+});
